fixed changes for alignment

--- a/src/Components/Sidebar/ParentProfiles.css
+++ b/src/Components/Sidebar/ParentProfiles.css
@@ -155,7 +155,7 @@
 }
   
 
-.parent-profile-row {
+.parent-header,.parent-profile-row {
   display: grid;
   grid-template-columns: 1.2fr 2fr 1.5fr 1.2fr 1.2fr 0.8fr !important;
   background-color: #f3f3f3 !important;
